# papita2

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CodeEditor.tsx  FileExplorer.tsx  Settings.tsx
src/hooks/: store.ts
src/lib/: virtualFS.ts
src/store/: apiSlice.ts  fileSystemSlice.ts  store.ts
